bk_ida/gccida/g3/general_operand
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/general_operand/src/recog.c:1379:31: error: must use 'enum' tag to refer to type 'machine_mode'
int  general_operand( rtx op, machine_mode mode) 
                              ^
                              enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/general_operand/src/recog.c:1399:27: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( !( _BYTE)v5 && ( *( &mode_class_0 + ( int)mode) & 0xFFFFFFFD) != 1 ) 
                          ^~~~~~~~~~~~
                          mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/general_operand/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/general_operand/src/recog.c:1399:54: error: invalid operands to binary expression ('const enum mode_class [59]' and 'unsigned int')
if ( !( _BYTE)v5 && ( *( &mode_class_0 + ( int)mode) & 0xFFFFFFFD) != 1 ) 
                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/general_operand/src/recog.c:1409:47: error: use of undeclared identifier 'machine_mode'
if ( trunc_int_for_mode( op->fld[0].rtwint, ( machine_mode)v3) != op->fld[0].rtwint ) 
                                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/general_operand/src/recog.c:1449:21: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( *( ( _DWORD *)&mode_class_0 + v5) == 2 && mode_size[v5] > mode_size[*( ( unsigned __int8 *)rtwint + 2)] ) 
                    ^~~~~~~~~~~~
                    mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/general_operand/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/general_operand/src/recog.c:1469:55: error: use of undeclared identifier 'machine_mode'
if ( *( _WORD *)v10 != 70 && !legitimate_address_p( ( machine_mode)*( ( unsigned __int8 *)rtx + 2), v10, 0) ) 
                                                      ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/general_operand/src/obj/recog.o] Error 1
